# web_traffic_processor

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
src/app/: cli.py
src/app/adapters/: duckdb_backend.py
src/app/adapters/repositories/: db_repository.py
src/app/adapters/sql/: calc_attribution.sql  init_schema.sql  process_orders.sql
src/app/domain/: models.py
src/app/domain/services/: normalization.py
src/app/dto/: order_dto.py
src/app/mappers/: order_mapper.py
src/app/services/: order_processing_service.py
src/app/utils/: hash_utils.py
tests/: test_cli.py
