[tool.poetry]
name = "web_traffic_processor"
version = "0.1.0"
description = "A tool to process and analyze web traffic data."
authors = ["Adam Kalina <kalinaadam75@gmail.com>"]
license = "MIT"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.20.0"
duckdb = "^1.4.1"
pyarrow = "^22.0.0"
pandas = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.7"
black = "^24.10"
mypy = "^1.13"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"